--- a/app/public/index.html
+++ b/app/public/index.html
@@ -104,7 +104,7 @@
           </div>
           <div class="col-lg-1"></div>
           <div class="col-sm-6 col-md-5">
-            <div class="uploaded-image parallax" style="height:100vh"></div>
+            <div class="uploaded-image parallax" style="height:30vh"></div>
             <div class="returned-text">
               <div class="col-xs-8">
                 <h3>THIS<br>IS</h3>
@@ -115,7 +115,7 @@
               </div>
               <div class="col-xs-4"></div>
             </div>
-            <!-- <div class="uploaded-image parallax" style="height:50vh"></div> -->
+            <div id="parallax-image" class="uploaded-image parallax" style="height:80vh"></div>
           </div>
         </div>
         <!-- mocp images from database -->
