--- a/app/public/index.html
+++ b/app/public/index.html
@@ -60,14 +60,10 @@
     </div>
   </div>
 
-  <!-- ~*~*~*~*~*~*~*~*~ loader  ~*~*~*~*~*~*~*~*~ -->
-  <div class="loader">
-    <div class="loader-animation"></div>
-  </div>
-
-  <!-- ~*~*~*~*~*~*~*~*~ main return ~*~*~*~*~*~*~*~*~ -->
   <div id="upload" class="main-body">
     <div class="row intro" style="margin:0px">
+
+      <!-- ~*~*~*~*~*~*~*~*~ description ~*~*~*~*~*~*~*~*~ -->
       <div class="description-mobile-container">
         <div class="logo-upright col-xs-4">
           <img id ="logo-upright" src="images/logo.png" style="width:100%">
@@ -83,8 +79,11 @@
         </div>
       </div>
     </div>
+
+    <!-- ~*~*~*~*~*~*~*~*~ image upload ~*~*~*~*~*~*~*~*~ -->
     <div class="row images">
       <div class="image-upload-mobile">
+        <!-- <div class="frame"></div> -->
         <div class="spacer-top">
           <div class="border"></div>
         </div>
@@ -106,32 +105,25 @@
             </div>
           </div>
         </div>
+        
         <div class="container-div container-div-img-text">
           <div class="reveal-image">
             <div id="returned-text-one" class="fixed-bg-wrap return-text-hide">
               <div class="returned-text">
                 <div id="text-title" class="head-text-one head-text">
                   <strong>
-                    <h4>
-                      <div id="photo-name"></div>
-                    </h4>
+                    <h4>This Is A Title</h4>
                   </strong>
                 </div>
                 <div class="body-text-one body-text">
-                  <div id="artist-one">
-                    <h4>
-                      <div id="artist-name"></div>
-                    </h4>
-                  </div>
+                  <div id="artist-one"><h4>Artist, Name</h4></div>
                   <div id="more-info-one"><h5>more info <strong>&#8594;</strong></h5></div>
                   <div class="line"></div>
                   <div class="add-tag">
                     <button id ="add-tag-one" type="button" class="btn" onclick="addTagOne()"><strong><h5>add tag</h5></strong></button>
                   </div>
-                  <div class="tags">
-                    <h5>
-                      <div id="tags-one"></div>
-                    </h5>
+                  <div id="tags-one" class="tags">
+                    <h5>#here_are #our_tags #architecture #black&amp;white #building #window #newBauhaus #Chicago #arch #facade #symmetry #bauhaus</h5>
                   </div>
                 </div>
               </div>
@@ -148,6 +140,8 @@
         </div>
       </div>
     </div>
+
+    <!-- ~*~*~*~*~*~*~*~*~ footer ~*~*~*~*~*~*~*~*~ -->
     <div class="row footer">
       <div class="footer-logo">
         <h5>#MoCPme</h5>
